refactor(console): unify model run endpoint
